# Daemon

./: .env.example  .gitignore  BINARY_PROTOCOL_PLAN.md  Dockerfile  README.md  docker-compose.yml  generate_proto.py  main.py  prometheus.yml  pyproject.toml
clients/: README.md
clients/kotlin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts  test.sh
clients/kotlin/src/main/kotlin/com/example/daemon/: Main.kt
clients/kotlin/src/main/proto/: task_daemon.proto
docs/: PROTOCOLS.md
examples/: README.md  basic_daemon.py  client.py  config_daemon.py  custom-queue.py  daemon-client.py  daemon-runner.py  daemon.py  docker-service.py  grpc_protocols.py  inputs.py  memory_queue.py  multi_param.py  pydantic-handlers.py  pydantic_daemon.py  simple_client.py  tasks.py
task_daemon/: __init__.py  __main__.py  grpc_service.py
task_daemon/client/: __init__.py  client.py  grpc_client.py  models.py
task_daemon/config/: __init__.py  config.py
task_daemon/core/: __init__.py  decorators.py  memory_queue.py  metrics.py  models.py  persistent_queue.py  queue.py
task_daemon/daemon/: __init__.py  builder.py  daemon.py
task_daemon/proto/: __init__.py  task_daemon_pb2.py  task_daemon_pb2_grpc.py
task_daemon/protocols/: __init__.py
tests/: test_basic.py  test_grpc.py  test_protocol_benchmark.py
